docs-archive/apache-airflow-providers-amazon/2.6.0/_sources/_api/airflow/providers/amazon/aws/transfers/s3_to_sftp/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.transfers.s3_to_sftp`
===========================================================

.. py:module:: airflow.providers.amazon.aws.transfers.s3_to_sftp


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.s3_to_sftp.S3ToSFTPOperator




.. py:class:: S3ToSFTPOperator(*, s3_bucket: str, s3_key: str, sftp_path: str, sftp_conn_id: str = 'ssh_default', s3_conn_id: str = 'aws_default', **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   This operator enables the transferring of files from S3 to a SFTP server.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3ToSFTPOperator`

   :param sftp_conn_id: The sftp connection id. The name or identifier for
       establishing a connection to the SFTP server.
   :type sftp_conn_id: str
   :param sftp_path: The sftp remote path. This is the specified file path for
       uploading file to the SFTP server.
   :type sftp_path: str
   :param s3_conn_id: The s3 connection id. The name or identifier for
       establishing a connection to S3
   :type s3_conn_id: str
   :param s3_bucket: The targeted s3 bucket. This is the S3 bucket from
       where the file is downloaded.
   :type s3_bucket: str
   :param s3_key: The targeted s3 key. This is the specified file path for
       downloading the file from S3.
   :type s3_key: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['s3_key', 'sftp_path']

      

   .. py:method:: get_s3_key(s3_key: str) -> str
      :staticmethod:

      This parses the correct format for S3 keys regardless of how the S3 url is passed.


   .. py:method:: execute(self, context: airflow.utils.context.Context) -> None

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



